--- a/src/main.scss
+++ b/src/main.scss
@@ -3,3 +3,8 @@
 
 @import "config/mixin" ;
 @import "config/main";
+@import "config/planes" ;
+
+@import "config/footer" ;
+
+@import "config/texto";
