--- a/src/shared/_variables.scss
+++ b/src/shared/_variables.scss
@@ -5,11 +5,12 @@ $myinfo: green ;
 $mydark: rgb(73, 4, 4) ;
 $light: white;
 
-$myBgColorLight2: rgb(169, 197, 248);
+$myBgColorLight2: rgb(248, 169, 169);
 
 
-$myBgColorLight: rgb(223, 151, 181);
+$myBgColorLight: rgb(158, 151, 223);
 
-$myBgColorLight3:rgb(205, 223, 191);
+$myBgColorLight3:rgb(179, 247, 208);
+$myBgColorLight4: rgba(80, 255, 156, 0.486);
 
 $boxshadow: 4px 3px 6px 0px rgb(102, 100, 117);
