--- a/src/config/_main.scss
+++ b/src/config/_main.scss
@@ -1,75 +1,56 @@
+.navbar{
+    background-color: $myBgColorLight3;
+}
+
 main{
+    @keyframes aparece{
+        0%{
+            opacity: 0;
+            transform: scale(0.1);
+        }
+        50%{
+            opacity: 0.5;
+            transform: scale(1.3);
+        }
+        100%{
+            opacity: 1;
+            transform: scale(1);
     
+        }
+    } 
     .entrada{
-        @include margin (10%, 0px, 0px, 0px);
-        background-color: $myBgColorLight2;
+        @include margin (0%, 20%, 0px, 0px);
         
         #hover{
-            background-color: aquamarine;
+            background-color: $myBgColorLight4;
             position: relative;
-            top: -3rem;
-            
+            top: -30rem;
+            width: 80%;
+            @include margin (20%, 0%, 0px, 0px);
+            text-align: center;
+            @include paddings(0%,0%,5%,5%);
+            animation: aparece 3s;
         }
-         /*figure{
-            grid-area: img;
+         figure{
             img{
-                width: 80%;
+                width: 100%;
                 @include margin (10%, 0px, 5%, 0px);
             }
         }
 
-        div{
-            grid-area: letra;
-            text-align: center;
-            
-        }
-        */
      }
-     
-     /*
-    .btnVer{
-        @include margin (0px, 0px, 5%, 10%);
-        display: flex;
-        justify-content: center;
+    
+    .btn{
+        background-color: $myBgColorLight2;
+        &:hover{
+            background-color: rgb(170, 25, 25);
+        }
         a:hover{
             color: $light;
         }
-    }
-    #tituloHor{
-        text-align: center;
-    }
-    #Horario{
-        display: grid;
-        grid-template-areas: "horario book";
-        gap: 5%;
-        width: 80%;
-        @include margin (15%, 0px, 0px, 10%);
-        grid-template-rows: 80% 20%;
-        table{
-            grid-area: horario;
-        }
-        div{
-            grid-area: book;
-            width: 100%;
-        }
-    }
+     }
 
  }
 
 
- @keyframes aparece{
-    0%{
-        opacity: 0;
-        transform: scale(0.1);
-    }
-    50%{
-        opacity: 0.5;
-        transform: scale(1.3);
-    }
-    100%{
-        opacity: 1;
-        transform: scale(1);
  
-    }
-    */
-}
