--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,6 +4,10 @@
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+@import url("https://fonts.googleapis.com/css2?family=League+Gothic&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dosis:wght@300&display=swap");
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
@@ -12047,6 +12051,15 @@ main .btn a:hover {
   margin-right: 0%;
   margin-top: -20%;
   margin-bottom: 0px;
+  text-align: center;
+}
+
+#planes thead {
+  background-color: #f8a9a9;
+}
+
+#planes tbody {
+  background-color: rgba(80, 255, 156, 0.486);
 }
 
 .modal-header {
@@ -12059,6 +12072,7 @@ main .btn a:hover {
 
 #cardPlan .card-body {
   background-color: #f8a9a9;
+  text-align: center;
 }
 
 footer {
@@ -12099,20 +12113,55 @@ footer section div:nth-child(2) {
 
 /******************************************/
 .texto-txt1 {
-  font-size: 40px;
-  font-family: "Roboto Condensed", sans-serif;
+  font-size: 50px;
+  font-family: "League Gothic", sans-serif;
   color: #14145c;
 }
 
 .texto-txt2 {
   font-size: 25px;
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: "Ubuntu", sans-serif;
   color: #03613a;
 }
 
 .texto-txtp {
   font-size: 18px;
-  font-family: "Nunito Sans", sans-serif;
+  font-family: "Fira Sans", sans-serif;
   color: #661304;
+}
+
+.texto-txtnota {
+  font-size: 18px;
+  font-family: "Dosis", sans-serif;
+  color: #661304;
+}
+
+@media all and (max-width: 660px) {
+  main .entrada {
+    margin-left: 0%;
+    margin-right: 5%;
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+  main .entrada #hover {
+    top: -23rem;
+    width: 70%;
+    margin-left: 20%;
+    margin-right: 0%;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    text-align: center;
+    padding-left: 0%;
+    padding-right: 0%;
+    padding-top: 5%;
+    padding-bottom: 5%;
+  }
+  main .entrada figure img {
+    width: 100%;
+    margin-left: 5%;
+    margin-right: 0px;
+    margin-top: 5%;
+    margin-bottom: 0px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
