--- a/src/main.scss
+++ b/src/main.scss
@@ -8,3 +8,10 @@
 @import "config/footer" ;
 
 @import "config/texto";
+
+@import "config/mediaquery" ;
+
+@import url('https://fonts.googleapis.com/css2?family=League+Gothic&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@300&display=swap');
